tests/NormalTests/paczka1/fuzzy1/85942056.err
Error in line 3: A8 A8 13,7
Error in line 8: A8 S552 49,4
Error in line 12: A8 S836 0,2
Error in line 14: A8 S552 35,9
Error in line 2: dv5o7vFogQn A807 79,9
Error in line 16: A8 S552 147,2
Error in line 21: O8yA80714,0
Error in line 23: A8 S552 2,8
Error in line 29: A8 S552 6,3
Error in line 22: twbl2Q4 S836 22,1
Error in line 33: 7nFK2 A8 60,6
Error in line 38: A8 S836 57,8
